Remove the fixed height on radio-set style, otherwise it would not align center properly

--- a/frontend/src/assets/css/tailwind.css
+++ b/frontend/src/assets/css/tailwind.css
@@ -113,7 +113,7 @@
 }
 
 .radio-set {
-  @apply h-9 items-center space-x-4;
+  @apply items-center space-x-4;
 }
 
 .radio {
